Kaggle Notebook |  LAB 2 Calculus of Variations | Version 4

--- a/lab-2.ipynb
+++ b/lab-2.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "eeff443b",
+   "id": "448c33b5",
    "metadata": {
     "papermill": {
-     "duration": 0.00712,
-     "end_time": "2024-05-03T20:17:38.757306",
+     "duration": 0.005135,
+     "end_time": "2024-05-05T19:38:17.163856",
      "exception": false,
-     "start_time": "2024-05-03T20:17:38.750186",
+     "start_time": "2024-05-05T19:38:17.158721",
      "status": "completed"
     },
     "tags": []
@@ -23,19 +23,19 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "386e8ca2",
+   "id": "a8abe098",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-03T20:17:38.772618Z",
-     "iopub.status.busy": "2024-05-03T20:17:38.772182Z",
-     "iopub.status.idle": "2024-05-03T20:17:39.795166Z",
-     "shell.execute_reply": "2024-05-03T20:17:39.793890Z"
+     "iopub.execute_input": "2024-05-05T19:38:17.175666Z",
+     "iopub.status.busy": "2024-05-05T19:38:17.174705Z",
+     "iopub.status.idle": "2024-05-05T19:38:17.903707Z",
+     "shell.execute_reply": "2024-05-05T19:38:17.902749Z"
     },
     "papermill": {
-     "duration": 1.034011,
-     "end_time": "2024-05-03T20:17:39.798183",
+     "duration": 0.737227,
+     "end_time": "2024-05-05T19:38:17.906078",
      "exception": false,
-     "start_time": "2024-05-03T20:17:38.764172",
+     "start_time": "2024-05-05T19:38:17.168851",
      "status": "completed"
     },
     "tags": []
@@ -53,19 +53,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "7fc1d1c7",
+   "id": "db7d4231",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-03T20:17:39.814237Z",
-     "iopub.status.busy": "2024-05-03T20:17:39.813637Z",
-     "iopub.status.idle": "2024-05-03T20:17:39.824410Z",
-     "shell.execute_reply": "2024-05-03T20:17:39.822907Z"
+     "iopub.execute_input": "2024-05-05T19:38:17.919078Z",
+     "iopub.status.busy": "2024-05-05T19:38:17.918068Z",
+     "iopub.status.idle": "2024-05-05T19:38:17.927273Z",
+     "shell.execute_reply": "2024-05-05T19:38:17.926342Z"
     },
     "papermill": {
-     "duration": 0.023595,
-     "end_time": "2024-05-03T20:17:39.828474",
+     "duration": 0.017938,
+     "end_time": "2024-05-05T19:38:17.929570",
      "exception": false,
-     "start_time": "2024-05-03T20:17:39.804879",
+     "start_time": "2024-05-05T19:38:17.911632",
      "status": "completed"
     },
     "tags": []
@@ -82,13 +82,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d1af374",
+   "id": "acfbb601",
    "metadata": {
     "papermill": {
-     "duration": 0.006861,
-     "end_time": "2024-05-03T20:17:39.843018",
+     "duration": 0.004299,
+     "end_time": "2024-05-05T19:38:17.938561",
      "exception": false,
-     "start_time": "2024-05-03T20:17:39.836157",
+     "start_time": "2024-05-05T19:38:17.934262",
      "status": "completed"
     },
     "tags": []
@@ -100,19 +100,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f96f6ca0",
+   "id": "9a48d855",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-03T20:17:39.858517Z",
-     "iopub.status.busy": "2024-05-03T20:17:39.858083Z",
-     "iopub.status.idle": "2024-05-03T20:17:39.950060Z",
-     "shell.execute_reply": "2024-05-03T20:17:39.948948Z"
+     "iopub.execute_input": "2024-05-05T19:38:17.949355Z",
+     "iopub.status.busy": "2024-05-05T19:38:17.948951Z",
+     "iopub.status.idle": "2024-05-05T19:38:18.015644Z",
+     "shell.execute_reply": "2024-05-05T19:38:18.014479Z"
     },
     "papermill": {
-     "duration": 0.103113,
-     "end_time": "2024-05-03T20:17:39.952868",
+     "duration": 0.075041,
+     "end_time": "2024-05-05T19:38:18.018077",
      "exception": false,
-     "start_time": "2024-05-03T20:17:39.849755",
+     "start_time": "2024-05-05T19:38:17.943036",
      "status": "completed"
     },
     "tags": []
@@ -120,18 +120,18 @@
    "outputs": [],
    "source": [
     "L = lambda0 * (4 * x * sp.sin(t) - Dx**2 - x**2)\n",
-    "l = lambda0 * x.subs(t, t2)**2 + lambda1 * x.subs(t, t0) - 1"
+    "l = lambda0 * x.subs(t, t2)**2 + lambda1 * (x.subs(t, t0) - 1)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "53c69459",
+   "id": "d96d8bb7",
    "metadata": {
     "papermill": {
-     "duration": 0.006286,
-     "end_time": "2024-05-03T20:17:39.965856",
+     "duration": 0.004438,
+     "end_time": "2024-05-05T19:38:18.027323",
      "exception": false,
-     "start_time": "2024-05-03T20:17:39.959570",
+     "start_time": "2024-05-05T19:38:18.022885",
      "status": "completed"
     },
     "tags": []
@@ -143,19 +143,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "8976ffcb",
+   "id": "067a993d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-03T20:17:39.982135Z",
-     "iopub.status.busy": "2024-05-03T20:17:39.981729Z",
-     "iopub.status.idle": "2024-05-03T20:17:40.048887Z",
-     "shell.execute_reply": "2024-05-03T20:17:40.047243Z"
+     "iopub.execute_input": "2024-05-05T19:38:18.038232Z",
+     "iopub.status.busy": "2024-05-05T19:38:18.037851Z",
+     "iopub.status.idle": "2024-05-05T19:38:18.086339Z",
+     "shell.execute_reply": "2024-05-05T19:38:18.085371Z"
     },
     "papermill": {
-     "duration": 0.078809,
-     "end_time": "2024-05-03T20:17:40.052078",
+     "duration": 0.056928,
+     "end_time": "2024-05-05T19:38:18.088838",
      "exception": false,
-     "start_time": "2024-05-03T20:17:39.973269",
+     "start_time": "2024-05-05T19:38:18.031910",
      "status": "completed"
     },
     "tags": []
@@ -171,13 +171,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68243948",
+   "id": "c76323ef",
    "metadata": {
     "papermill": {
-     "duration": 0.006231,
-     "end_time": "2024-05-03T20:17:40.065028",
+     "duration": 0.004336,
+     "end_time": "2024-05-05T19:38:18.097952",
      "exception": false,
-     "start_time": "2024-05-03T20:17:40.058797",
+     "start_time": "2024-05-05T19:38:18.093616",
      "status": "completed"
     },
     "tags": []
@@ -189,19 +189,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f8210fd9",
+   "id": "c317569d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-03T20:17:40.080204Z",
-     "iopub.status.busy": "2024-05-03T20:17:40.079823Z",
-     "iopub.status.idle": "2024-05-03T20:17:40.300662Z",
-     "shell.execute_reply": "2024-05-03T20:17:40.299374Z"
+     "iopub.execute_input": "2024-05-05T19:38:18.109068Z",
+     "iopub.status.busy": "2024-05-05T19:38:18.108215Z",
+     "iopub.status.idle": "2024-05-05T19:38:18.276704Z",
+     "shell.execute_reply": "2024-05-05T19:38:18.275854Z"
     },
     "papermill": {
-     "duration": 0.231953,
-     "end_time": "2024-05-03T20:17:40.303510",
+     "duration": 0.176531,
+     "end_time": "2024-05-05T19:38:18.279053",
      "exception": false,
-     "start_time": "2024-05-03T20:17:40.071557",
+     "start_time": "2024-05-05T19:38:18.102522",
      "status": "completed"
     },
     "tags": []
@@ -215,19 +215,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e4975d5d",
+   "id": "27b0d6d0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-03T20:17:40.319073Z",
-     "iopub.status.busy": "2024-05-03T20:17:40.318663Z",
-     "iopub.status.idle": "2024-05-03T20:17:40.330481Z",
-     "shell.execute_reply": "2024-05-03T20:17:40.329092Z"
+     "iopub.execute_input": "2024-05-05T19:38:18.290229Z",
+     "iopub.status.busy": "2024-05-05T19:38:18.289864Z",
+     "iopub.status.idle": "2024-05-05T19:38:18.299078Z",
+     "shell.execute_reply": "2024-05-05T19:38:18.298081Z"
     },
     "papermill": {
-     "duration": 0.022979,
-     "end_time": "2024-05-03T20:17:40.333176",
+     "duration": 0.017311,
+     "end_time": "2024-05-05T19:38:18.301083",
      "exception": false,
-     "start_time": "2024-05-03T20:17:40.310197",
+     "start_time": "2024-05-05T19:38:18.283772",
      "status": "completed"
     },
     "tags": []
@@ -239,13 +239,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad37fa4d",
+   "id": "e96b6779",
    "metadata": {
     "papermill": {
-     "duration": 0.006755,
-     "end_time": "2024-05-03T20:17:40.346619",
+     "duration": 0.00432,
+     "end_time": "2024-05-05T19:38:18.309993",
      "exception": false,
-     "start_time": "2024-05-03T20:17:40.339864",
+     "start_time": "2024-05-05T19:38:18.305673",
      "status": "completed"
     },
     "tags": []
@@ -257,19 +257,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "53aeaa8e",
+   "id": "2ae09265",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-03T20:17:40.361968Z",
-     "iopub.status.busy": "2024-05-03T20:17:40.361531Z",
-     "iopub.status.idle": "2024-05-03T20:17:40.385539Z",
-     "shell.execute_reply": "2024-05-03T20:17:40.384385Z"
+     "iopub.execute_input": "2024-05-05T19:38:18.322052Z",
+     "iopub.status.busy": "2024-05-05T19:38:18.321686Z",
+     "iopub.status.idle": "2024-05-05T19:38:18.338224Z",
+     "shell.execute_reply": "2024-05-05T19:38:18.337233Z"
     },
     "papermill": {
-     "duration": 0.035106,
-     "end_time": "2024-05-03T20:17:40.388378",
+     "duration": 0.025928,
+     "end_time": "2024-05-05T19:38:18.340387",
      "exception": false,
-     "start_time": "2024-05-03T20:17:40.353272",
+     "start_time": "2024-05-05T19:38:18.314459",
      "status": "completed"
     },
     "tags": []
@@ -282,13 +282,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d62c51a",
+   "id": "708d15f1",
    "metadata": {
     "papermill": {
-     "duration": 0.007355,
-     "end_time": "2024-05-03T20:17:40.402474",
+     "duration": 0.005621,
+     "end_time": "2024-05-05T19:38:18.350626",
      "exception": false,
-     "start_time": "2024-05-03T20:17:40.395119",
+     "start_time": "2024-05-05T19:38:18.345005",
      "status": "completed"
     },
     "tags": []
@@ -300,19 +300,19 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "51cb1401",
+   "id": "12d41cb9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-03T20:17:40.417324Z",
-     "iopub.status.busy": "2024-05-03T20:17:40.416938Z",
-     "iopub.status.idle": "2024-05-03T20:17:40.421916Z",
-     "shell.execute_reply": "2024-05-03T20:17:40.420693Z"
+     "iopub.execute_input": "2024-05-05T19:38:18.361078Z",
+     "iopub.status.busy": "2024-05-05T19:38:18.360735Z",
+     "iopub.status.idle": "2024-05-05T19:38:18.365389Z",
+     "shell.execute_reply": "2024-05-05T19:38:18.364230Z"
     },
     "papermill": {
-     "duration": 0.015371,
-     "end_time": "2024-05-03T20:17:40.424325",
+     "duration": 0.012519,
+     "end_time": "2024-05-05T19:38:18.367642",
      "exception": false,
-     "start_time": "2024-05-03T20:17:40.408954",
+     "start_time": "2024-05-05T19:38:18.355123",
      "status": "completed"
     },
     "tags": []
@@ -325,19 +325,19 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "b7ad1a7e",
+   "id": "f19ef7a0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-03T20:17:40.439365Z",
-     "iopub.status.busy": "2024-05-03T20:17:40.438959Z",
-     "iopub.status.idle": "2024-05-03T20:17:41.378063Z",
-     "shell.execute_reply": "2024-05-03T20:17:41.376759Z"
+     "iopub.execute_input": "2024-05-05T19:38:18.378440Z",
+     "iopub.status.busy": "2024-05-05T19:38:18.378068Z",
+     "iopub.status.idle": "2024-05-05T19:38:19.020866Z",
+     "shell.execute_reply": "2024-05-05T19:38:19.019838Z"
     },
     "papermill": {
-     "duration": 0.949808,
-     "end_time": "2024-05-03T20:17:41.380818",
+     "duration": 0.650827,
+     "end_time": "2024-05-05T19:38:19.023231",
      "exception": false,
-     "start_time": "2024-05-03T20:17:40.431010",
+     "start_time": "2024-05-05T19:38:18.372404",
      "status": "completed"
     },
     "tags": []
@@ -366,19 +366,19 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "4a92f452",
+   "id": "a6c1344d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-03T20:17:41.396408Z",
-     "iopub.status.busy": "2024-05-03T20:17:41.395967Z",
-     "iopub.status.idle": "2024-05-03T20:17:41.579668Z",
-     "shell.execute_reply": "2024-05-03T20:17:41.578721Z"
+     "iopub.execute_input": "2024-05-05T19:38:19.034409Z",
+     "iopub.status.busy": "2024-05-05T19:38:19.034022Z",
+     "iopub.status.idle": "2024-05-05T19:38:19.182705Z",
+     "shell.execute_reply": "2024-05-05T19:38:19.181696Z"
     },
     "papermill": {
-     "duration": 0.194206,
-     "end_time": "2024-05-03T20:17:41.582034",
+     "duration": 0.15664,
+     "end_time": "2024-05-05T19:38:19.184918",
      "exception": false,
-     "start_time": "2024-05-03T20:17:41.387828",
+     "start_time": "2024-05-05T19:38:19.028278",
      "status": "completed"
     },
     "tags": []
@@ -410,19 +410,19 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "dc500de4",
+   "id": "0fa80ec9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-03T20:17:41.598713Z",
-     "iopub.status.busy": "2024-05-03T20:17:41.597961Z",
-     "iopub.status.idle": "2024-05-03T20:17:41.866155Z",
-     "shell.execute_reply": "2024-05-03T20:17:41.864845Z"
+     "iopub.execute_input": "2024-05-05T19:38:19.196591Z",
+     "iopub.status.busy": "2024-05-05T19:38:19.196214Z",
+     "iopub.status.idle": "2024-05-05T19:38:19.390696Z",
+     "shell.execute_reply": "2024-05-05T19:38:19.389577Z"
     },
     "papermill": {
-     "duration": 0.281113,
-     "end_time": "2024-05-03T20:17:41.870317",
+     "duration": 0.203219,
+     "end_time": "2024-05-05T19:38:19.393327",
      "exception": false,
-     "start_time": "2024-05-03T20:17:41.589204",
+     "start_time": "2024-05-05T19:38:19.190108",
      "status": "completed"
     },
     "tags": []
@@ -451,19 +451,19 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "7319a219",
+   "id": "bf50d95d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-03T20:17:41.894520Z",
-     "iopub.status.busy": "2024-05-03T20:17:41.893940Z",
-     "iopub.status.idle": "2024-05-03T20:17:41.958534Z",
-     "shell.execute_reply": "2024-05-03T20:17:41.957162Z"
+     "iopub.execute_input": "2024-05-05T19:38:19.405419Z",
+     "iopub.status.busy": "2024-05-05T19:38:19.405031Z",
+     "iopub.status.idle": "2024-05-05T19:38:19.445326Z",
+     "shell.execute_reply": "2024-05-05T19:38:19.444277Z"
     },
     "papermill": {
-     "duration": 0.08126,
-     "end_time": "2024-05-03T20:17:41.961766",
+     "duration": 0.04892,
+     "end_time": "2024-05-05T19:38:19.447592",
      "exception": false,
-     "start_time": "2024-05-03T20:17:41.880506",
+     "start_time": "2024-05-05T19:38:19.398672",
      "status": "completed"
     },
     "tags": []
@@ -489,19 +489,19 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "812d8356",
+   "id": "d3971fcf",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-03T20:17:41.978775Z",
-     "iopub.status.busy": "2024-05-03T20:17:41.978347Z",
-     "iopub.status.idle": "2024-05-03T20:17:42.765238Z",
-     "shell.execute_reply": "2024-05-03T20:17:42.764021Z"
+     "iopub.execute_input": "2024-05-05T19:38:19.460266Z",
+     "iopub.status.busy": "2024-05-05T19:38:19.459182Z",
+     "iopub.status.idle": "2024-05-05T19:38:20.081787Z",
+     "shell.execute_reply": "2024-05-05T19:38:20.080762Z"
     },
     "papermill": {
-     "duration": 0.798693,
-     "end_time": "2024-05-03T20:17:42.768177",
+     "duration": 0.631309,
+     "end_time": "2024-05-05T19:38:20.084138",
      "exception": false,
-     "start_time": "2024-05-03T20:17:41.969484",
+     "start_time": "2024-05-05T19:38:19.452829",
      "status": "completed"
     },
     "tags": []
@@ -530,13 +530,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73eaa225",
+   "id": "a5aa4abd",
    "metadata": {
     "papermill": {
-     "duration": 0.007354,
-     "end_time": "2024-05-03T20:17:42.783319",
+     "duration": 0.005216,
+     "end_time": "2024-05-05T19:38:20.095453",
      "exception": false,
-     "start_time": "2024-05-03T20:17:42.775965",
+     "start_time": "2024-05-05T19:38:20.090237",
      "status": "completed"
     },
     "tags": []
@@ -574,14 +574,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 8.388686,
-   "end_time": "2024-05-03T20:17:43.414213",
+   "duration": 6.063582,
+   "end_time": "2024-05-05T19:38:20.621998",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2024-05-03T20:17:35.025527",
+   "start_time": "2024-05-05T19:38:14.558416",
    "version": "2.5.0"
   }
  },
